--- a/Dok/Kapitel/PraktischeAnwendungderFM-Synthese.tex
+++ b/Dok/Kapitel/PraktischeAnwendungderFM-Synthese.tex
@@ -5,11 +5,18 @@ Da es bei der FM-Synthese schwer fällt vorauszusagen, wie das durch die Synthes
 Trotzdem gibt es einige Methoden den generierten Klang natürlicher wirken zu lassen. Diese werden im weiteren Verlauf dieses Kapitels vorgestellt und anschließend wird der Versuch unternommen den Klang eines Tones einer Querflöte nachzubilden.
 
 \FloatBarrier
-\subsubsection{Methoden zur Generierung eines Instrumententones mittels FM-Synthese}
+\subsubsection{Techniken zur Generierung eines Instrumententones mittels FM-Synthese}
 
 Bei der Synthese eines Tones mittels FM-Synthese müssen zunächst die Parameter der Formel der FM-Synthese festgelegt werden. Hierzu kann das Frequenzspektrum und das Spektrogramm des nachzubildenden Tones verwendet werden. Eine ausführliche Erklärung der einzelnen Parameter ist zu finden in Kapitel \ref{einfacheFM} - \nameref{einfacheFM}. 
 
-Mit dem Offensichtlichstem kann gestartet werden, der Grundfrequenz. Sie ist die niedrigste ausgeprägte Frequenz des Spektrums und legt die Tonhöhe fest \cite[S. 53]{barkowsky}. Sie kann als Trägerfrequenz $f_c$ verwendet werden. Der Abstand der einzelnen Frequenzen zueinander ist der zweite Anhaltspunkt. Dieser Abstand findet als Modulationsfrequenz $f_m$ Verwendung. Für harmonische Töne ist ein ganzzahliges Vielfaches der Grundfrequenz als Modulationsfrequenz nötig \cite[S. 528]{chowningPaper}. Der Modulationsindex $I$ kann mithilfe der Bessel Funktionen gefunden werden - siehe hierzu \ref{bulli:besselModIndexZusammenahang} - \nameref{bulli:besselModIndexZusammenahang}. Alternativ kann eine grobe Schätzung vorgenommen werden, hierzu ist die Faustformel Modulationsindex + 2 = Anzahl der sichtbaren Seitenfrequenzen nützlich. Sollte mittels der normalen FM-Synthese kein zufriedenstellendes Ergebnis erzielt werden können, sollte mit der komplexen FM-Synthese experimentiert werden. 
+Mit dem Offensichtlichstem kann gestartet werden, der Grundfrequenz. Sie ist die niedrigste ausgeprägte Frequenz des Spektrums und legt die Tonhöhe fest \cite[S. 53]{barkowsky}. Sie kann als Trägerfrequenz $f_c$ verwendet werden. Der Abstand der einzelnen Frequenzen zueinander ist der zweite Anhaltspunkt. Dieser Abstand findet als Modulationsfrequenz $f_m$ Verwendung. Für harmonische Töne ist ein ganzzahliges Vielfaches der Grundfrequenz als Modulationsfrequenz nötig \cite[S. 528]{chowningPaper}. Der Modulationsindex $I$ kann mithilfe der Bessel Funktionen gefunden werden - siehe hierzu \ref{bulli:besselModIndexZusammenahang} - \nameref{bulli:besselModIndexZusammenahang}. Alternativ kann eine grobe Schätzung vorgenommen werden, hierzu ist die folgende Faustformel nützlich:
+
+\begin{equation}
+\label{eq:faustformel}
+I + 1 = \text{Anzahl der Seitenfrequenzen mit signifikanter Ausprägung}
+\end{equation}
+
+Die Formel in \ref{eq:faustformel} kann mit Hilfe der Formel der Bandbreite aus \ref{eq:fmBandwidth} hergeleitet werden \cite[S. 221]{lathi}. Sollte mittels der normalen FM-Synthese kein zufriedenstellendes Ergebnis erzielt werden können, kann mit der komplexen FM-Synthese experimentiert werden. 
 
 Bei der komplexen FM-Synthese finden mehrere Träger oder mehrere Modulatoren Verwendung. Diese können in Reihe oder parallel geschaltet werden. Außerdem kann auch die so genannte Feedback Frequenz Modulation genutzt werden, welche das voran gegangene Signal moduliert \cite[S. 399 f.]{hornerPaper}. Feedback-FM-Synthese kann außerdem eingesetzt werden um Rauschen zu erzeugen. Sie kann aber auch ein sehr komplexes Spektrum mit vielen Seitenfrequenzen erzeugen. Komplexe FM-Synthese findet Einsatz wenn mit der normalen FM-Synthese nicht ausreichend komplexe Spektren erzeugt werden können. Dies kann zum Beispiel der Fall sein wenn mehrere exponentiell fallende Seitenfrequenzen erzeugt werden sollen. Wenn bei einfacher FM-Synthese der Modulationsindex erhöht wird um mehr Seitenfrequenzen zu erzeugen, verändert sich die Stärke der Grundfrequenz, definiert durch die Bessel Funktionen - nachzulesen im Kapitel \ref{bulli:besselModIndexZusammenahang} - \nameref{bulli:besselModIndexZusammenahang}. Um dies zu vermeiden können die Modulatoren verschachtelt werden - nachzulesen im Kapitel \ref{cascade} - \nameref{cascade}
 
@@ -20,7 +27,6 @@ Eines der wichtigsten Grundbestandteile eines jeden Instrumententones ist die so
   \includegraphics[width=0.5\textwidth]{adsrDefault.png}
 \caption{Standard ADSR-Hüllkurve}
 \label{fig:adsrDefault}
-Quelle: Eigene Darstellung mit Matlab
 \end{figure}
 
 Da allerdings bei vielen Instrumenten die Lautstärke in den einzelnen Phasen der ADSR-Hüllkurve nicht gleichmäßig steigt oder sinkt, ist es nötig beliebig komplexe Kurven abbilden zu können. Bei vielen Instrumenten steigt beispielsweise die Lautstärke in der Attack Phase exponentiell an und fällt in der Decay und Release Phase auch wieder exponentiell ab. Manche Synthesizer bieten zusätzlich auch noch eine Hold Phase vor der Attack Phase, da es Instrumente gibt, die einige Zeit benötigen bis sie nach dem Anschlagen des Tones in die Attack Phase eintreten. In Abbildung \ref{fig:adsrTypical} wurden weitere für Instrumenten typische Hüllkurven dargestellt um zu verdeutlichen, dass die ADSR-Hüllkurve bei Instrumenten beliebig schlichte sowie komplexe Formen annehmen kann.
@@ -30,14 +36,14 @@ Da allerdings bei vielen Instrumenten die Lautstärke in den einzelnen Phasen de
   \includegraphics[width=1\textwidth]{adsrTypical.png}
 \caption{Typische ADSR-Hüllkurve eines Blechblasinstrumentes und eines Klaviers}
 \label{fig:adsrTypical}
-Quelle: Eigene Darstellung mit Matlab
+Quelle: nach \cite{chowningPaper}
 \end{figure}
 
 Auch wenn das Hinzufügen einer ADSR-Hüllkurve den Klang des synthetisierten Tones schon natürlicher wirken lässt, hört sich der erzeugte Ton noch nicht wie ein echtes Instrument an. Eine weitere Möglichkeit ihn zu verbessern, stellt die Variierung des Modulationsindex über die Zeit oder die Amplitude dar. Somit kann die Anzahl der Seitenfrequenzen verändert werden, was zu einem lebendigeren Klang führt. Bei Blasinstrumenten beispielsweise, wird der Modulationsindex typischerweise über die Amplitude (also mit Hilfe der ADSR-Hüllkurve) variiert. \cite[S. 532]{chowningPaper}
 
 Um den Klang des Tones noch weiter zu verbessern stellen Filter ein gutes Hilfsmittel dar. Filter können genutzt werden um das von der FM Synthese erzeugte Signal zu manipulieren. Dabei werden ungewollte Frequenzen gedämpft bzw. komplett herausgefiltert oder gewollte Frequenzen verstärkt. Typische Vertreter von Filtern sind Hochpassfilter, Tiefpassfilter, Bandpass und Bandsperre. \cite[S. 100-104]{stotz}
 
-Das bisher erzeugte Signal ist noch ein reines Signal, welches so in der Natur nicht vorkommen kann. Bei Luft Verwirbelungen und Unebenheiten des Instrumentes tritt Rauschen auf. Dieses Rauschen trägt zum typischen Klangbild eines Instrumentes bei und sollte auch nachgebildet werden. Ein Rauschen kann mittels Feedback-FM-Synthese erzeugt werden, dafür muss der Modulationsindex der Feedback-FM-Synthese sehr hoch angesetzt werden. Das von der Feedback-FM-Synthese erzeugte Signal gleicht bei sehr hohem Modulationsindex einem weißen Rauschen. Anschließend kann dieses Rauschen mittels Multibandpassfilter um die jeweiligen ausgeprägten Frequenzen gefiltert werden. Würde das Rauschen nicht gefiltert werden, kann neben dem Ton, das Rauschen als solches wahrgenommen werden. \cite[S. 152]{barkowsky}
+Das bisher erzeugte Signal ist noch ein reines Signal, welches so in der Natur nicht vorkommen kann. Bei Luftverwirbelungen und Unebenheiten des Instrumentes tritt Rauschen auf. Dieses Rauschen trägt zum typischen Klangbild eines Instrumentes bei und sollte auch nachgebildet werden. Ein Rauschen kann mittels Feedback-FM-Synthese erzeugt werden, dafür muss der Modulationsindex der Feedback-FM-Synthese sehr hoch angesetzt werden. Das von der Feedback-FM-Synthese erzeugte Signal gleicht bei sehr hohem Modulationsindex einem weißen Rauschen. Anschließend kann dieses Rauschen mittels Multibandpassfilter um die jeweiligen ausgeprägten Frequenzen gefiltert werden. Würde das Rauschen nicht gefiltert werden, kann neben dem Ton, das Rauschen als solches wahrgenommen werden. \cite[S. 152]{barkowsky}
 
 Um den Klang des synthetisierten Tones noch natürlicher zu gestalten, könnte dem Ton zusätzlich ein Hall-Effekt hinzugefügt werden. Hall entsteht bei der diffusen Reflexion des Schalls an den Wänden eines Raumes, welche zu einer großen Anzahl an Echos führen. \cite[S. 108]{stotz}
 
@@ -52,7 +58,6 @@ Im Laufe dieses Kapitels soll ein Ton einer Querflöte mittels FM-Synthese erzeu
   \includegraphics[width=1\textwidth]{plotFluteOrig.png}
 \caption{Plot des Spektrogramms, der Waveform und des Spektrums eines echten Tones einer Querflöte}
 \label{fig:plotFluteOrig}
-Quelle: Eigene Darstellung mit Matlab
 \end{figure}
 
 Anhand des Spektrums können bereits einige Erkenntnisse für die FM-Synthese ausgelesen werden. Zunächst ist zu bemerken, dass die am stärksten ausgeprägte Frequenz bei etwa 800 Hz liegt. Bei genauerer Betrachtung wird sichtbar, dass die Frequenz nicht exakt bei 800 Hz sondern bei 791 Hz ihren maximalen Ausschlag erreicht. Dies entspricht am ehesten einem G5 mit 784 Hz \cite[S. 181]{borucki}. Diese Frequenz (791 Hz) werden wir bei der FM-Synthese als Trägerfrequenz nutzen. Im Spektrum sind außerdem noch mehrere Seitenfrequenzen zu erkennen. Die erste dieser Seitenfrequenzen befindet sich bei etwa dem doppelten der Grundfrequenz. Bei genauerer Betrachtung wird sichtbar, dass sie ihren maximalen Amplitudenwert wirklich genau bei dem doppeltem der Grundfrequenz (1582 Hz) hat. Also ist der Abstand zwischen Grundfrequenz und erster Seitenfrequenz genauso groß wie die Grundfrequenz. Hierbei ist zu bemerken, dass der Abstand von einem ganzzahligen Multiplikator mit der Grundfrequenz typisch für einen harmonischen Ton ist \cite[S. 528]{chowningPaper}. Die nächsten Seitenfrequenzen haben jeweils wieder denselben Abstand von 791 Hz zur jeweiligen vorangegangenen Seitenfrequenz. Aus dieser Beobachtung können wir unsere Modulationsfrequenz von 791 Hz schließen. Anhand der Anzahl der sichtbaren Seitenfrequenzen im Spektrum können wir eine ungefähre Abschätzung unseres Modulationsindexes wagen. Somit wird als Modulationsindex für die ersten Tests vorerst 0.5 angenommen. 
@@ -62,7 +67,6 @@ Anhand des Spektrums können bereits einige Erkenntnisse für die FM-Synthese au
   \includegraphics[width=1\textwidth]{plotFMSyntheseI05.png}
 \caption{Plot des Spektrogramms und des Spektrums der FM-Synthese mit den Parametern $f_c = 791$ Hz, $f_m = f_c$ und $I = 0.5$ }
 \label{fig:plotFMSyntheseI05}
-Quelle: Eigene Darstellung mit Matlab
 \end{figure}
 
 Ein erstes Spektrum der FM-Synthese mit den eben festgelegten Werten kann in Abbildung \ref{fig:plotFMSyntheseI05} begutachtet werden. Beim Evaluieren der Ergebnisse dieses Spektrums fällt auf, dass die erste Seitenfrequenz im Verhältnis zur Grundfrequenz einen viel stärkeren Ausschlag aufweist als es bei der Querflöte der Fall ist. Außerdem fällt danach die Amplitude der 2. und 3. Seitenfrequenz viel stärker ab als bei dem Instrument. Sieht man sich jetzt noch das Spektrogramm (ebenfalls in Abbildung \ref{fig:plotFMSyntheseI05}) an, fällt im Vergleich zum Spektrogramm der Querflöte die sehr viel geringer Anzahl an Seitenfrequenzen auf. Die Seitenfrequenzen bei 4000 Hz und darüber sind bei dem Instrument noch deutlich sichtbar während sie bei der FM-Synthese schon bei 4000 Hz kaum noch existent sind. Versucht man jetzt den Modulationsindex zu erhöhen um die Anzahl der Seitenfrequenzen zu erhöhen, verlagert sich die Amplitude unserer Trägerfrequenz auf die Seitenfrequenzen, damit werden die Seitenfrequenz stärker und die Träger Frequenz schwächer, zu sehen in Abbildung \ref{fig:spektrumFMSyntheseI2}. 
@@ -72,7 +76,6 @@ Ein erstes Spektrum der FM-Synthese mit den eben festgelegten Werten kann in Abb
   \includegraphics[width=0.5\textwidth]{spektrumFMSyntheseI2.png}
 \caption{Plot des Spektrums der FM-Synthese mit den Parametern $f_c = 791 Hz$, $f_m = f_c$ und $I = 2$}
 \label{fig:spektrumFMSyntheseI2}
-Quelle: Eigene Darstellung mit Matlab
 \end{figure}
 
 Um dieses Verhalten zu umgehen müssen wir uns der komplexen FM-Synthese widmen. Hier werden mehrere Modulatoren verschachtelt um eine größere Anzahl an Seitenfrequenzen zu erzeugen. Allerdings ist es bei der komplexen FM-Synthese nochmal schwerer im Vergleich zur einfachen FM-Synthese, wie stark die Amplituden der einzelnen Seitenfrequenzen ausgeprägt sind, deshalb braucht es hier einige Experimente um auf das gewünschte Ergebnis zu erzeugen. In Abbildung \ref{fig:plotFMSyntheseKomplex4Mod} kann das Ergebnis der FM-Synthese mit 4 Modulatoren betrachtet werden. Dieses Spektrum ähnelt dem der Querflöte schon sehr viel stärker und auch das Spektrogramm weißt in den Intensitäten der Seitenfrequenzen eine deutliche Ähnlichkeit auf.
@@ -82,7 +85,6 @@ Um dieses Verhalten zu umgehen müssen wir uns der komplexen FM-Synthese widmen.
   \includegraphics[width=1\textwidth]{plotFMSyntheseKomplex4Mod.png}
 \caption{Plot des Spektrogramms und des Spektrums der FM-Synthese mit 4 Modulatoren und den Parametern $f_c = 791 Hz$, $f_{m1} = f_{m2} = f_{m3} = f_{m4} = f_c$, $I_1 = 0.3$, $I_2 = 0.5$, $I_3 = 1$ und $I_4 = 1$}
 \label{fig:plotFMSyntheseKomplex4Mod}
-Quelle: Eigene Darstellung mit Matlab
 \end{figure}
 
 Da die Grundeinstellung der FM-Synthese mit den oben genannten Parametern ein zufriedenstellendes Signal erzeugt, können wir uns jetzt der Veredlung des Tones widmen. Zuerst wird dem Signal ein Vibrato hinzugefügt. Durch das Hinzufügen des Vibratos, schwingt der erzeugte Ton leicht und wirkt lebendiger und nicht ganz so künstlich. Dies kann bewerkstelligt werden indem die Modulationsfrequenz leicht erhöht oder verringert wird. Auch hierbei muss experimentiert werden, welche Erhöhung der Modulationsfrequenz das gewünschte Ergebnis erzeugt. Als sehr ähnlich zum Original Ton hat sich in diesem Fall eine Erhöhung um 2.5 Hz herausgestellt. Unsere neue Modulationsfrequenz ist somit $f_m = f_c + 2.5$. In Abbildung \ref{fig:spektrumFMSyntheseVibrato} wird die Auswirkung des Vibratos sichtbar, es bilden sich um die Seitenfrequenzen weitere recht gering ausgeprägte Frequenzausschläge.
@@ -92,7 +94,6 @@ Da die Grundeinstellung der FM-Synthese mit den oben genannten Parametern ein zu
   \includegraphics[width=0.5\textwidth]{spektrumFMSyntheseVibrato.png}
 \caption{Plot des Spektrums der FM-Synthese mit 4 Modulatoren, Vibrato und den Parameter $f_c = 791 Hz$, $f_{m1} = f_{m2} = f_{m3} = f_{m4} = f_c + 2.5$, $I_1 = 0.3$, $I_2 = 0.5$, $I_3 = 1$ und $I_4 = 1$}
 \label{fig:spektrumFMSyntheseVibrato}
-Quelle: Eigene Darstellung mit Matlab
 \end{figure}
 
 Der nächste wichtige und einfach hinzuzufügende Bestandteil des synthetisierten Tones ist die ADSR-Hüllkurve. Um generell eine Querflöte nachzuahmen wäre eine Hüllkurve wie in Abbildung \ref{fig:adsrFlute} (links) gezeigt möglich. Allerdings versuchen wir den originalen Ton der Querflöte so gut wie möglich nachzuahmen, hierfür wurde eine komplexere Hüllkurve nach dem Beispiel der Waveform des originalen Tones generiert. Bei dieser Hüllkurve wurde Attack, Decay und Release von der allgemeinen Hüllkurve übernommen und die Sustain Phase angepasst, zu sehen in Abbildung \ref{fig:adsrFlute} (rechts). 
@@ -102,19 +103,17 @@ Der nächste wichtige und einfach hinzuzufügende Bestandteil des synthetisierte
   \includegraphics[width=1\textwidth]{adsrFlute.png}
 \caption{Plot der ADSR-Hüllkurve einer Querflöte und der hier genutzten, komplexeren Hüllkurve}
 \label{fig:adsrFlute}
-Quelle: Eigene Darstellung mit Matlab
 \end{figure}
 
 Nach Hinzufügen der ADSR-Hüllkurve, fällt im Spektrogramm auf, dass die Seitenfrequenzen trotz geringerer Amplitude bei Attack und Release Phase einen größeren Ausschlag als beim Instrument aufweist. Dieser Ausschlag kann verringert werden, indem der erste Modulationsindex mit der ADSR-Hüllkurve variiert wird. 
 
-Nachdem Vibrato, Variabler Modulationsindex und ADSR-Hüllkurve hinzugefügt wurden, hat sich das Spektrogramm zur Abbildung \ref{fig:plotFMSyntheseKomplex4Mod} kaum geändert. Es wird nur der Vibrato durch die etwas breiteren Seitenfrequenzen und die ADSR-Hüllkurve durch Ansteigen des Spektrums zu Beginn des Tones und Abfallen des Spektrums nach 1.2 Sekunden sichtbar. Der Ton hört sich von der Tonhöhe und der Intensität schon stark nach dem originalen Querflötenton an. Allerdings fehlen noch die typischen Blas- und Luft Verwirbelungsgeräusche sowie das sehr dominante Anblasgeräusch. Um die typischen Blasgeräusche zu erzeugen wird zunächst ein Rauschen mittels Feedback-FM-Synthese mit hohem Modulationsindex erzeugt. Würde das Rauschen ohne weitere Arbeitsschritte dem synthetisierten Signal hinzugefügt, könnte das Rauschen stark herausgehört werden. Um dies zu verhindern muss das Rauschen vorerst gefiltert werden. Hierzu wird ein Multibandpassfilter über alle möglichen Seitenfrequenzen erstellt. Das gefilterte Rauschen wird anschließend noch mit einer ADSR-Hüllkurve veredelt. Dieser Schritt ist nötig, da während der Attack Phase des original Tones, wie im Spektrogramm in Abbildung \ref{fig:plotFluteOrig} zu sehen, das Rauschen durch das Anblasen des Instrumentes sehr scharf heraus sticht. Zusätzlich kann noch ein sehr leises Rauschen der Feedback-FM-Synthese ohne Filter über das ganze Frequenzspektrum gelegt werden um auch in den höheren Frequenzen einen leichten Ausschlag im Spektrogramm kenntlich zu machen. Trotz des verstärkten Rauschens zu Beginn des Tones, fehlt noch der das stark hörbare Anblasgeräusch. Beim Betrachten des Spektrums und des Spektrogramms fallen noch zwei recht starke Ausschläge zu Beginn des Signals auf. Ein Ausschlag befindet sich bei 904 Hz und der Zweite bei 1182 Hz. Beide Frequenzen können mit einem einfachen Sinus erzeugt und mit einer ADSR-Hüllkurve, die nur eine kurze Attack Phase aufweist und danach komplett abfällt, modelliert und zum Signal addiert werden. In Abbildung \ref{fig:plotFMSyntheseComplete} ist das Ergebnis der FM-Synthese mit den, in diesem Kapitel, besprochenen Veredelungen gezeigt. In den Plots sind die Ähnlichkeiten zum originalen Ton deutlich zu sehen.
+Nachdem Vibrato, Variabler Modulationsindex und ADSR-Hüllkurve hinzugefügt wurden, hat sich das Spektrogramm zur Abbildung \ref{fig:plotFMSyntheseKomplex4Mod} kaum geändert. Es wird nur der Vibrato durch die etwas breiteren Seitenfrequenzen und die ADSR-Hüllkurve durch Ansteigen des Spektrums zu Beginn des Tones und Abfallen des Spektrums nach 1.2 Sekunden sichtbar. Der Ton hört sich von der Tonhöhe und der Intensität schon stark nach dem originalen Querflötenton an. Allerdings fehlen noch die typischen Blas- und Luftverwirbelungsgeräusche sowie das sehr dominante Anblasgeräusch. Um die typischen Blasgeräusche zu erzeugen wird zunächst ein Rauschen mittels Feedback-FM-Synthese mit hohem Modulationsindex erzeugt. Würde das Rauschen ohne weitere Arbeitsschritte dem synthetisierten Signal hinzugefügt, könnte das Rauschen stark herausgehört werden. Um dies zu verhindern muss das Rauschen vorerst gefiltert werden. Hierzu wird ein Multibandpassfilter über alle möglichen Seitenfrequenzen erstellt. Das gefilterte Rauschen wird anschließend noch mit einer ADSR-Hüllkurve veredelt. Dieser Schritt ist nötig, da während der Attack Phase des original Tones, wie im Spektrogramm in Abbildung \ref{fig:plotFluteOrig} zu sehen, das Rauschen durch das Anblasen des Instrumentes sehr scharf heraus sticht. Zusätzlich kann noch ein sehr leises Rauschen der Feedback-FM-Synthese ohne Filter über das ganze Frequenzspektrum gelegt werden um auch in den höheren Frequenzen einen leichten Ausschlag im Spektrogramm kenntlich zu machen. Trotz des verstärkten Rauschens zu Beginn des Tones, fehlt noch der das stark hörbare Anblasgeräusch. Beim Betrachten des Spektrums und des Spektrogramms fallen noch zwei recht starke Ausschläge zu Beginn des Signals auf. Ein Ausschlag befindet sich bei 904 Hz und der Zweite bei 1182 Hz. Beide Frequenzen können mit einem einfachen Sinus erzeugt und mit einer ADSR-Hüllkurve, die nur eine kurze Attack Phase aufweist und danach komplett abfällt, modelliert und zum Signal addiert werden. In Abbildung \ref{fig:plotFMSyntheseComplete} ist das Ergebnis der FM-Synthese mit den, in diesem Kapitel, besprochenen Veredelungen gezeigt. In den Plots sind die Ähnlichkeiten zum originalen Ton deutlich zu sehen.
 
 \begin{figure} [h!t!b!]
 \centering
   \includegraphics[width=1\textwidth]{plotFMSyntheseComplete.png}
 \caption{Plot des fertigen Tones der FM-Synthese mit 4 Modulatoren, ADSR-Hüllkurve, Variablem Modulationsindex, Vibrato, Rauschen und Anblasgeräusch}
 \label{fig:plotFMSyntheseComplete}
-Quelle: Eigene Darstellung mit Matlab
 \end{figure}
 
 Der in diesem Kapitel synthetisierte Ton nähert sich dem originalen Flötenton sehr gut. Trotzdem weißt der Flötenton noch etwas mehr Lebendigkeit auf, da das gesamte Signal nicht so statisch wie das der FM-Synthese wirkt. Beispielsweise hält der Querflötenspieler bzw die Querflöte selbst, die Tonhöhe nicht über den ganzen Ton exakt gleich, sondern sie schwingt leicht. Dies ist besonders am Ende des Tones zu hören. Bei der FM-Synthese wird allerdings über dem gesamten Ton die selbe Trägerfrequenz genutzt. Trotzdem ist der erzeugte Ton kaum von dem einer echten Querflöte bei neutraler Spielweise unterscheidbar. Dieses Ergebnis zeigt, dass es sehr wohl möglich ist, wenn auch mit erheblichem Aufwand verbunden, mit der FM-Synthese einen natürlich wirkenden Instrumententon zu erzeugen. 
